@@ -1,4 +1,6 @@
 # vim: set noexpandtab:
+2013-03-11 davide
+	* set value of Event::mllMcTruth according to IsAlpgenLowMass->MllForAlpgen, IsSherpaZll->MllForSherpa
 2013-03-11 Matt
 	* Added new muon vector for calculating the met with muons in 2.4<|eta|<2.5
 	         * This was a 'bug' on our side and should be fixed for all analysis post conference
